@@ -2,6 +2,7 @@ Revision history for Perl module Archive::Peek::Libarchive:
 
 0.37
      - add iterate method
+     - add search_cpan.pl example
 
 0.36 Fri Oct  7 12:30:16 BST 2011
      - minor documentation fix (spotted by Claes Jakobsson)
